<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Humzearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="firstname">First Name</string>
    <string name="fullname">Full Name</string>
    <string name="firstandlast">First and Last Name</string>
    <string name="passwordhint">At least 6 characters</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="logout">Logout</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="main_menu_items">
        <item ></item>
        <item >Record Tune</item>
        <item >View Tunes</item>
        <item >View Responses</item>
        <item >Rewards</item>
        <item >My Account</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <array name="main_menu_icons">
        <item>@drawable/ic_recordtune</item>
        <item>@drawable/ic_viewtune</item>
        <item>@drawable/ic_viewresponse</item>
        <item>@drawable/ic_reward</item>
        <item>@drawable/ic_myaccount</item>
    </array>
    
    <string name="desc_list_item_icon">Item Icon</string>
    
    <string name="timerstart">00:00</string>
    
    <string name="taptorecord">Tap to Record</string>
    
    <string name="playpreview">Play Preview</string>
    
    <string name="notsatisfied">Not satisfied with results?</string>
    
    <string name="sharewithcommunity">SHARE WITH COMMUNITY</string>
    
    <!-- Language List -->
    <string-array name="language_array">
        <item>-- Not Selected --</item>
        <item>English</item> 
        <item>Chinese/Mandarin</item>
        <item>Spanish</item>
        <item>Arabic</item>
        <item>Hindi</item>
        <item>Russain</item>
        <item>Sinhalese</item>
    </string-array>
    
    <!-- Country List -->
    <string-array name="countries_array">
        <item>Not Selected</item>
	    <item>Afghanistan</item>
	    <item>Albania</item>
	    <item>Algeria</item>
	    <item>American Samoa</item>
	    <item>Andorra</item>
	    <item>Angola</item>
	    <item>Anguilla</item>
	    <item>Antarctica</item>
	    <item>Antigua and Barbuda</item>
	    <item>Argentina</item>
	    <item>Armenia</item>
	    <item>Aruba</item>
	    <item>Australia</item>
	    <item>Austria</item>
	    <item>Azerbaijan</item>
	    <item>Bahrain</item>
	    <item>Bangladesh</item>
	    <item>Barbados</item>
	    <item>Belarus</item>
	    <item>Belgium</item>
	    <item>Belize</item>
	    <item>Benin</item>
	    <item>Bermuda</item>
	    <item>Bhutan</item>
	    <item>Bolivia</item>
	    <item>Bosnia and Herzegovina</item>
	    <item>Botswana</item>
	    <item>Bouvet Island</item>
	    <item>Brazil</item>
	    <item>British Indian Ocean Territory</item>
	    <item>British Virgin Islands</item>
	    <item>Brunei</item>
	    <item>Bulgaria</item>
	    <item>Burkina Faso</item>
	    <item>Burundi</item>
	    <item>Cambodia</item>
	    <item>Cameroon</item>
	    <item>Canada</item>
	    <item>Cape Verde</item>
	    <item>Cayman Islands</item>
	    <item>Central African Republic</item>
	    <item>Chad</item>
	    <item>Chile</item>
	    <item>China</item>
	    <item>Christmas Island</item>
	    <item>Cocos (Keeling) Islands</item>
	    <item>Colombia</item>
	    <item>Comoros</item>
	    <item>Congo</item>
	    <item>Cook Islands</item>
	    <item>Costa Rica</item>
	    <item>Cote d\'Ivoire</item>
	    <item>Croatia</item>
	    <item>Cuba</item>
	    <item>Cyprus</item>
	    <item>Czech Republic</item>
	    <item>Democratic Republic of the Congo</item>
	    <item>Denmark</item>
	    <item>Djibouti</item>
	    <item>Dominica</item>
	    <item>Dominican Republic</item>
	    <item>East Timor</item>
	    <item>Ecuador</item>
	    <item>Egypt</item>
	    <item>El Salvador</item>
	    <item>Equatorial Guinea</item>
	    <item>Eritrea</item>
	    <item>Estonia</item>
	    <item>Ethiopia</item>
	    <item>Faeroe Islands</item>
	    <item>Falkland Islands</item>
	    <item>Fiji</item>
	    <item>Finland</item>
	    <item>Former Yugoslav Republic of Macedonia</item>
	    <item>France</item>
	    <item>French Guiana</item>
	    <item>French Polynesia</item>
	    <item>French Southern Territories</item>
	    <item>Gabon</item>
	    <item>Georgia</item>
	    <item>Germany</item>
	    <item>Ghana</item>
	    <item>Gibraltar</item>
	    <item>Greece</item>
	    <item>Greenland</item>
	    <item>Grenada</item>
	    <item>Guadeloupe</item>
	    <item>Guam</item>
	    <item>Guatemala</item>
	    <item>Guinea</item>
	    <item>Guinea-Bissau</item>
	    <item>Guyana</item>
	    <item>Haiti</item>
	    <item>Heard Island and McDonald Islands</item>
	    <item>Honduras</item>
	    <item>Hong Kong</item>
	    <item>Hungary</item>
	    <item>Iceland</item>
	    <item>India</item>
	    <item>Indonesia</item>
	    <item>Iran</item>
	    <item>Iraq</item>
	    <item>Ireland</item>
	    <item>Israel</item>
	    <item>Italy</item>
	    <item>Jamaica</item>
	    <item>Japan</item>
	    <item>Jordan</item>
	    <item>Kazakhstan</item>
	    <item>Kenya</item>
	    <item>Kiribati</item>
	    <item>Kuwait</item>
	    <item>Kyrgyzstan</item>
	    <item>Laos</item>
	    <item>Latvia</item>
	    <item>Lebanon</item>
	    <item>Lesotho</item>
	    <item>Liberia</item>
	    <item>Libya</item>
	    <item>Liechtenstein</item>
	    <item>Lithuania</item>
	    <item>Luxembourg</item>
	    <item>Macau</item>
	    <item>Madagascar</item>
	    <item>Malawi</item>
	    <item>Malaysia</item>
	    <item>Maldives</item>
	    <item>Mali</item>
	    <item>Malta</item>
	    <item>Marshall Islands</item>
	    <item>Martinique</item>
	    <item>Mauritania</item>
	    <item>Mauritius</item>
	    <item>Mayotte</item>
	    <item>Mexico</item>
	    <item>Micronesia</item>
	    <item>Moldova</item>
	    <item>Monaco</item>
	    <item>Mongolia</item>
	    <item>Montenegro</item>
	    <item>Montserrat</item>
	    <item>Morocco</item>
	    <item>Mozambique</item>
	    <item>Myanmar</item>
	    <item>Namibia</item>
	    <item>Nauru</item>
	    <item>Nepal</item>
	    <item>Netherlands</item>
	    <item>Netherlands Antilles</item>
	    <item>New Caledonia</item>
	    <item>New Zealand</item>
	    <item>Nicaragua</item>
	    <item>Niger</item>
	    <item>Nigeria</item>
	    <item>Niue</item>
	    <item>Norfolk Island</item>
	    <item>North Korea</item>
	    <item>Northern Marianas</item>
	    <item>Norway</item>
	    <item>Oman</item>
	    <item>Pakistan</item>
	    <item>Palau</item>
	    <item>Panama</item>
	    <item>Papua New Guinea</item>
	    <item>Paraguay</item>
	    <item>Peru</item>
	    <item>Philippines</item>
	    <item>Pitcairn Islands</item>
	    <item>Poland</item>
	    <item>Portugal</item>
	    <item>Puerto Rico</item>
	    <item>Qatar</item>
	    <item>Reunion</item>
	    <item>Romania</item>
	    <item>Russia</item>
	    <item>Rwanda</item>
	    <item>Sqo Tome and Principe</item>
	    <item>Saint Helena</item>
	    <item>Saint Kitts and Nevis</item>
	    <item>Saint Lucia</item>
	    <item>Saint Pierre and Miquelon</item>
	    <item>Saint Vincent and the Grenadines</item>
	    <item>Samoa</item>
	    <item>San Marino</item>
	    <item>Saudi Arabia</item>
	    <item>Senegal</item>
	    <item>Serbia</item>
	    <item>Seychelles</item>
	    <item>Sierra Leone</item>
	    <item>Singapore</item>
	    <item>Slovakia</item>
	    <item>Slovenia</item>
	    <item>Solomon Islands</item>
	    <item>Somalia</item>
	    <item>South Africa</item>
	    <item>South Georgia and the South Sandwich Islands</item>
	    <item>South Korea</item>
	    <item>South Sudan</item>
	    <item>Spain</item>
	    <item>Sri Lanka</item>
	    <item>Sudan</item>
	    <item>Suriname</item>
	    <item>Svalbard and Jan Mayen</item>
	    <item>Swaziland</item>
	    <item>Sweden</item>
	    <item>Switzerland</item>
	    <item>Syria</item>
	    <item>Taiwan</item>
	    <item>Tajikistan</item>
	    <item>Tanzania</item>
	    <item>Thailand</item>
	    <item>The Bahamas</item>
	    <item>The Gambia</item>
	    <item>Togo</item>
	    <item>Tokelau</item>
	    <item>Tonga</item>
	    <item>Trinidad and Tobago</item>
	    <item>Tunisia</item>
	    <item>Turkey</item>
	    <item>Turkmenistan</item>
	    <item>Turks and Caicos Islands</item>
	    <item>Tuvalu</item>
	    <item>Virgin Islands</item>
	    <item>Uganda</item>
	    <item>Ukraine</item>
	    <item>United Arab Emirates</item>
	    <item>United Kingdom</item>
	    <item>United States</item>
	    <item>United States Minor Outlying Islands</item>
	    <item>Uruguay</item>
	    <item>Uzbekistan</item>
	    <item>Vanuatu</item>
	    <item>Vatican City</item>
	    <item>Venezuela</item>
	    <item>Vietnam</item>
	    <item>Wallis and Futuna</item>
	    <item>Western Sahara</item>
	    <item>Yemen</item>
	    <item>Yugoslavia</item>
	    <item>Zambia</item>
	    <item>Zimbabwe</item>
 	</string-array>
	    <string name="artist">Artist</string>
	    <string name="language">Language</string>
	    <string name="country">Country</string>
	    <string name="year">Year</string>
	    <string name="share">SHARE</string>
	    <string name="playtune">Play Tune</string>
	    <string name="addresponse">ADD RESPONSE</string>
	    <string name="title">Title</string>
	    <string name="alltunes">All Tunes</string>
	    <string name="mytunes">My Tunes</string>
	    <string name="deletepermanently">Delete Permanently</string>
	    <string name="respondedtune">Responded Tune</string>
	    <string name="accept">Accept</string>
	    <string name="reject">REJECT</string>
	    <string name="redeem">REDEEM</string>
	    <string name="redeemitems">Redeemed Items</string>
	    <string name="pointsbalance">Points Balance</string>
	    <string name="address">Address</string>
	    <string name="datejoined">Date Joined</string>
	    <string name="changeimage">CHANGE IMAGE</string>
	    <string name="addressline1">Address Line 1</string>
	    <string name="addressline2">Address Line 2</string>
	    <string name="city">City</string>
	    <string name="postcode">Postcode</string>
	    <string name="addedit">ADD/EDIT</string>
	    <string name="noresults">No Results</string>

</resources>
